# serializer version: 1
# name: test_describe[compute-pool-compute-pool-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[database-database-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[function-function-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[integration-integration]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[network-rule-network rule]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[network-rule-network-rule-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[procedure-procedure-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[role-role-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[schema-schema-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[secret-secret-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[service-service-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[stage-stage-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[stream-stream-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[streamlit-streamlit-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[table-table-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[task-task-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[user-user-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[view-view-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[warehouse-warehouse-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe_fails_image_repository
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Describe is currently not supported for object of type image-repository      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_drop[compute-pool-compute-pool-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | c      |
  +--------+
  
  '''
# ---
# name: test_drop[database-database-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | d      |
  +--------+
  
  '''
# ---
# name: test_drop[function-function-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | f      |
  +--------+
  
  '''
# ---
# name: test_drop[image-repository-image-repository-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | i      |
  +--------+
  
  '''
# ---
# name: test_drop[integration-integration]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | i      |
  +--------+
  
  '''
# ---
# name: test_drop[network-rule-network rule]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | n      |
  +--------+
  
  '''
# ---
# name: test_drop[network-rule-network-rule-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | n      |
  +--------+
  
  '''
# ---
# name: test_drop[procedure-procedure-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | p      |
  +--------+
  
  '''
# ---
# name: test_drop[role-role-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | r      |
  +--------+
  
  '''
# ---
# name: test_drop[schema-schema-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[secret-secret-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[service-service-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[stage-stage-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[stream-stream-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[streamlit-streamlit-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | s      |
  +--------+
  
  '''
# ---
# name: test_drop[table-table-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | t      |
  +--------+
  
  '''
# ---
# name: test_drop[task-task-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | t      |
  +--------+
  
  '''
# ---
# name: test_drop[user-user-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | u      |
  +--------+
  
  '''
# ---
# name: test_drop[view-view-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | v      |
  +--------+
  
  '''
# ---
# name: test_drop[warehouse-warehouse-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | w      |
  +--------+
  
  '''
# ---
